# rust-shop

./: .env  Cargo.toml  diesel.toml
migrations/2025-05-03-222225_create_product/: up.sql
migrations/2025-05-03-222234_create_category/: down.sql  up.sql
migrations/2025-05-03-224619_create_product_category/: down.sql  up.sql
migrations/2025-05-03-231813_create_cart/: down.sql  up.sql
migrations/2025-05-03-231859_create_cart_product/: down.sql  up.sql
migrations/2025-05-03-232804_create_users/: up.sql
migrations/2025-05-04-223934_create_user/: up.sql
migrations/2025-05-04-223945_create_carts/: up.sql
migrations/2025-05-04-223955_create_cart_products/: up.sql
migrations/2025-08-23-224144_add_roles_to_user/: up.sql
migrations/2025-08-30-231212_add_qty_for_products/: down.sql  up.sql
migrations/2025-09-06-235217_add_discount_for_products_and_categories/: down.sql  up.sql
migrations/2025-09-28-222147_add_profile/: up.sql
migrations/2025-09-28-223651_add_addresses/: up.sql
migrations/2025-09-28-230114_add_user_notifications/: up.sql
src/: lib.rs  main.rs  pool.rs  schema.rs
src/auth/: handlers.rs  models.rs  routes.rs
src/cart/: handlers.rs  models.rs  routes.rs
src/category/: handlers.rs  models.rs  routes.rs
src/discount/: handlers.rs  models.rs  routes.rs
src/notification/: handlers.rs  models.rs
src/product/: handlers.rs  models.rs  routes.rs
src/rmq/: client.rs
src/templates/notifications/: discount.html  welcome.html
src/user/: handlers.rs  models.rs  routes.rs
src/utils/: error.rs  mod.rs  print_request.rs  types.rs
