[package]
name = "axum-shop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bb8 = "0.9.0"
diesel = { version = "2.2.10", features = ["postgres", "uuid"] }
diesel-async = "0.5.2"
dotenvy = "0.15.7"
serde = "1.0.219"
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.16.0"
