[package]
name = "axum-shop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bb8 = "0.9.0"
bcrypt = "0.17.0"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.10", features = ["postgres", "uuid"] }
diesel-async = "0.5.2"
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
listenfd = "1.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
