[package]
name = "axum-shop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
axum-validated-extractors = "0.1.2"
bb8 = "0.8.6"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.10", features = ["postgres", "uuid", "chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
dotenvy = "0.15.7"
http-body-util = "0.1.3"
jsonwebtoken = "9.3.1"
listenfd = "1.0.2"
mime = "0.3.17"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
